--- a/aaaa.qmd
+++ b/aaaa.qmd
@@ -12,7 +12,7 @@ editor: visual
 # devtools::install_github("business-science/tidyquant")
 # Loads tidyquant, lubridate, xts, quantmod, TTR, and PerformanceAnalytics
 library(tidyverse)
-library(tidyquant)  
+library(tidyquant) 
 ```
 
 ## Descripción Activo y Contexto (Hito 1)
@@ -107,7 +107,7 @@ CL %>%
 
 Con los gráficos anteriores se muestra que Cencosud y Cencosud Shopping tienen la misma tendencia, con respecto al precio del combustible, este tiende a la baja y las acciones de Cencosud a la alta. Por último, cuando el dólar tiende a la baja, las acciones del Cencosud Shopping aumentan. Sin embargo, con solo los gráficos no se puede asegurar que exista una correlación.
 
-[![](Captura%20de%20Pantalla%202023-09-27%20a%20la(s)%2022.38.52.png)](https://www.mbi.cl/static/uploads/noticias/doc/bolsa240.pdf)
+![](Datos/Captura%20de%20Pantalla%202023-09-27%20a%20la(s)%2022.38.52.png){fig-align="left"}
 
 Este gráfico obtenido de mbi muestra la evolcuión del rendimiento del IPSA y cencoshopp durante 2021-2022, donde el el retorno del IPSA fue mayor.
 
@@ -131,7 +131,7 @@ No fue posible encontrar la cartera de inversiones que posee el activo CencosudS
 
 #### Caracterización de emisiones históricas (Aplicación cap. 20)
 
-https://www.cmfchile.cl/institucional/mercados/prospectos.php?pro=AC&tipo=COM&or=6&pestania=
+<https://www.cmfchile.cl/institucional/mercados/prospectos.php?pro=AC&tipo=COM&or=6&pestania=>
 
 Basándose en el "PROSPECTO DE EMISIÓN DE ACCIONES DE PAGO, REGISTRADO BAJO EL NÚMERO 1080 EL 06 DE MAYO DE 2019." (CMF) la emisión tiene una parte de antecedentes legales, características de la emisión y descripción de la colocación.
 
@@ -139,27 +139,27 @@ Los antecedentes legales consisten en la junta extraordinaria de accionistas y p
 
 Las características de la emisión fueron las siguientes:
 
-1\) El monto máximo de la emisión es de \$466.816.007.752 CLP.
+1)  El monto máximo de la emisión es de \$466.816.007.752 CLP.
 
-2\) El número total de acciones a emitir son de 547.263.785, siendo todas estas acciones nominativas y ordinarias.
+2)  El número total de acciones a emitir son de 547.263.785, siendo todas estas acciones nominativas y ordinarias.
 
-3\) Las primeras emisiones de acciones representarán un 30,73%, en relación con el total luego de la colocación.
+3)  Las primeras emisiones de acciones representarán un 30,73%, en relación con el total luego de la colocación.
 
-4\) Las acciones no tienen valor nominal.
+4)  Las acciones no tienen valor nominal.
 
-5\) Con respecto al precio de colocación todas las acciones fueron ofrecidas a los accionistas de la junta extraordinaria a un precio de 853 CLP, sin embargo, todos rechazaron la opción de compra por lo que fueron colocadas para accionistas y terceros a un precio acordado por la directiva.
+5)  Con respecto al precio de colocación todas las acciones fueron ofrecidas a los accionistas de la junta extraordinaria a un precio de 853 CLP, sin embargo, todos rechazaron la opción de compra por lo que fueron colocadas para accionistas y terceros a un precio acordado por la directiva.
 
-6\) Con respecto al plazo de colocación y formas de pago, tienen un plazo de tres años para colocar, suscribir y pagar, este plazo finalizó el 8 de enero de 2022. El pago debe ser en pesos, cheque, vale vista bancario o transferencia bancaria.
+6)  Con respecto al plazo de colocación y formas de pago, tienen un plazo de tres años para colocar, suscribir y pagar, este plazo finalizó el 8 de enero de 2022. El pago debe ser en pesos, cheque, vale vista bancario o transferencia bancaria.
 
-7\) Los fondos recaudados serán utilizados para pagar parte de la deuda.
+7)  Los fondos recaudados serán utilizados para pagar parte de la deuda.
 
 Por último, la descripción de la colocación es la siguiente:
 
-1\) se incorporaran 547.263.784 nuevas acciones
+1)  se incorporaran 547.263.784 nuevas acciones
 
-2\) La colocación se realizara con intermediarios, estos son: Banchile, Larrain Vial, JP morgan, BCI
+2)  La colocación se realizara con intermediarios, estos son: Banchile, Larrain Vial, JP morgan, BCI
 
-3\) El procedimiento de colocación fue mediante el mecanismo denominado Subasta de un Libro de ordenes regulado en el manual de operaciones en acciones de la bolsa de comercio de Santiago. La subasta fue realizada de la siguiente manera I) realizar presentaciones a potenciales inversionistas tanto en chile como el exterior, el directorio acordo un precio entre 1475 y 1700. II) los interesados en adquirir acciones se registraran sus ordenes con los agentes colocadores. III) Los agentes colocadores o corredoras de bolsa involucradas y autorizados incluiran las ordenes en el sistema de subasta. IV) En la fecha de cierre del libro de ordenes, el directorio determinara el precio que seran colocadas las acciones. V) La cantidad de acciones que se le asigen a cada inversionista se determina con los terminos indicados en el manual. Por ultimo, las caracteristicas y plazos de la subasta del libro de ordenes se publican en la forma y plazo establecidos en el manual. En la junta extraordinaria no se acordo ofrecer un porcentaje minimo de colocación
+3)  El procedimiento de colocación fue mediante el mecanismo denominado Subasta de un Libro de ordenes regulado en el manual de operaciones en acciones de la bolsa de comercio de Santiago. La subasta fue realizada de la siguiente manera I) realizar presentaciones a potenciales inversionistas tanto en chile como el exterior, el directorio acordo un precio entre 1475 y 1700. II) los interesados en adquirir acciones se registraran sus ordenes con los agentes colocadores. III) Los agentes colocadores o corredoras de bolsa involucradas y autorizados incluiran las ordenes en el sistema de subasta. IV) En la fecha de cierre del libro de ordenes, el directorio determinara el precio que seran colocadas las acciones. V) La cantidad de acciones que se le asigen a cada inversionista se determina con los terminos indicados en el manual. Por ultimo, las caracteristicas y plazos de la subasta del libro de ordenes se publican en la forma y plazo establecidos en el manual. En la junta extraordinaria no se acordo ofrecer un porcentaje minimo de colocación
 
 Comparándolo con el procedimiento básico realizado en el capítulo, (este consiste en conferencias previas a la suscripción, presentación y aprobación de la declaración de registros, fijación de precios de la emisión, oferta pública y venta, estabilización en el mercado). Se puede apreciar que los primeros dos pasos corresponden a los aspectos legales mencionados anteriormente, el paso tres corresponde al precio que fue ofrecido a la junta de accionistas y al mercado, los pasos cuatro y cinco tienen ciertas diferencias dado que no se puede desprender del texto de la CMF que compran acciones para luego vender a un precio mayor, y el precio no está especificado sino que en un rango
 
@@ -193,146 +193,9 @@ A este portafolio se le invertirá 10 millones de pesos chilenos con las siguien
 
 Este portafolio con aversión al riesgo moderada-baja, se agregó un 40% de ponderación al activo más riesgoso (con mayor beta). Se ponderó un 20% de CENCOSHOPP dado que se espera que no tendrá una profunda volatilidad Además, las mayores ponderaciones son para los activos que han tenido un mayor incremento de precio a lo largo del año, banco santander aproximadamente aumentó el valor de su acción en un 25%, enel un 35% y cencoshopp un 10%, los gráficos sobre la variación se muestran a continuación, donde en general desde el 2022, los precios han ido a la alta. Finalmente se ponderó un 40% de BSANTANDER para poder mitigar el riesgo, debido a que es una industria de bajo riesgo y posee el menor beta, por lo que si el mercado baja, esta no se verá tan afectada.
 
-![](WhatsApp%20Image%202023-09-28%20at%2015.19.41.jpeg)\
-![](WhatsApp%20Image%202023-09-28%20at%2015.21.20.jpeg)![](WhatsApp%20Image%202023-09-28%20at%2015.22.21.jpeg)
+\
+![](Datos/WhatsApp%20Image%202023-09-28%20at%2015.19.41.jpeg)
 
-### Aplicación Black-Scholes
+![](Datos/WhatsApp%20Image%202023-09-28%20at%2015.21.20.jpeg){fig-align="left"}
 
-```{r}
-library(quantmod)
-library(xts)
-black_scholes <- function(S, K, t, r, sigma,tipo) {
-  if(tipo=="call"){
-    d1 <- (log(S/K) + (r + 0.5 * sigma^2) * t) / (sigma * sqrt(t))
-    d2 <- d1 - sigma * sqrt(t)
-    N_d1 <- pnorm(d1)
-    N_d2 <- pnorm(d2)
-    precio_call <- S * N_d1 - K * exp(-r * t) * N_d2
-    return(precio_call)}
-  if(tipo=="put"){
-    d1 <- (log(S/K) + (r + 0.5 * sigma^2) * t) / (sigma * sqrt(t))
-    d2 <- d1 - sigma * sqrt(t)
-    value <-  (K*exp(-r*T)*pnorm(-d2) - S*pnorm(-d1))
-    return(value)}
-  }
-  
-Activo<- "CENCOSHOPP.SN"
-getSymbols(Activo, src = "yahoo", from = "2018-01-01", to = "2023-10-16")
-precios <- Cl(get(Activo))
-rendimientos <- diff(log(precios))
-sigma<-sd(rendimientos[2:length(rendimientos)])
-volatilidad<-var(rendimientos[2:length(rendimientos)])
-
-S<- 1344 # Precio de la acción a 16 de octubre
-K<- 1400 # Precio del ejercicio
-R<- 0.0642 # Tasa libre de riesgo (Bonos BCH a 10 años al 12 de oct)
-sigma <-sigma
-t <- 1 # Tiempo
-
-precio_call <- black_scholes(S, K, t, R, sigma,"call")
-precio_put <- black_scholes(S, K, t, R, sigma,"put")
-print(paste("El precio de la opción call es:", precio_call))
-print(paste("El precio de la opción put es:", precio_put))
-```
-
-Precio de la acción al 16 de Octubre
-
-![](Captura%20de%20Pantalla%202023-10-16%20a%20la(s)%2022.15.03.png)
-
-Tasa libre del riesgo (Bono banco central)
-
-![](Captura%20de%20Pantalla%202023-10-23%20a%20la(s)%2011.37.34.png)
-
-### Modelo Adicional de valorizacion
-
-Ademas, del modelo de Black & Scholes, existen distintos modelos sobre valorizar opciones tales como: árbol binomial, volatilidad implícita, opciones reales, modelo de Heston, modelo de Cox-Ingersoll-Ross, modelo de Merton, modelo de Ornstein-Uhlenbeck.
-
-Para efectos de este proyecto se utilizara el árbol binomial, este modelo fue desarollado por Cox, Ross y Rubinstein. El árbol binomial muestra las distintas posibilidades que puede tomar el valor de la acción en una cantidad de periodos.
-
-Para el caso de un periodo, se debe tener en cuenta el precio de la acción, y los posibles valores que puede tener dependiendo del estado de la naturaleza (up y down), para definir el modelo matematico, se denominan las siguientes notación
-
-S: Precio de la acción subyacente
-
-SU: Precio de la acción en un escenario alcista
-
-SD: Precio de la acción en un escenario bajista
-
-C: Precio de la opcion de compra (Valor de la acción que se acuerda)
-
-Cu, Cd: representa los valores de la opción en los distintos estados, en otras palabras, son las ganancias (si es perdida se considera como ganancia 0).
-
-El siguiente diagrama explica el modelo
-
-![](Captura%20de%20Pantalla%202023-10-17%20a%20la(s)%2018.16.04.png)
-
-Fuente (Mascareñas,1994)
-
-En el diagramada de la izquierda 120 vendria siendo S\*U (precio\*retorno en estado up) y el 90 S\*D (precio\*retorno en estado down). Por otro lado, el de la derecha el 20 es la ganancia que se obtiene si se ejerce la opción en el estado alciste y 0 es cuando no se ejerce la opción (dado que esta en el escenario down)
-
-El valor de ratio de cobertura se obtiene igualando el flujo de caja al final del periodo optimista como pesimista en donde se obtiene
-
-H= (cu-cd)/S\*(U-D)
-
-La probabilidad de ocurrencia del escenario positivo se modala como
-
-P=(1+Rf-D)/(U-D)
-
-Donde Rf es la tasa libre de riesgo
-
-Otra posible manera de calcular la probabilidad es
-
-P= e\^(rΔt)-d/(U-D)
-
-Por otro lado, la probabilidad que ocurra el escenario negativo se modela como
-
-1-P=(U-(1+Rf))/(U-D)
-
-Finalmente, el valor de la opción de compra se calcula como
-
-C=(Cu\*P+Cd(1-P))/1+Rf
-
-Cabe mencionar que este modelo se puede extender hasta n periodos, pero por simplicidad solo se probara para 1 periodo
-
-Julián Benavides, en su paper "EVALUACIÓN DE LA APLICACIÓN DE DOS MODELOS DE VALORACIÓN DE OPCIONES A LA ADMINISTRACIÓN DE PORTAFOLIOS" (2002) compara el modelo black and scholes con el binomial con relación al "portafolio insurence"
-
-Gastón Silverio, en su paper "Modelo binomial para la valoración de empresas y los efectos de la deuda: escudo fiscal y liquidación de la firma" (2014) propone un modelo para valorar empresas teniendo como base la teoria de opciones reales.
-
-### Aplicacion modelo adicional
-
-```{r}
-# Función para valorar una opción europea de compra con un solo período
-option_single_period_binomial_tree <- function(S, K, rf, u, d){
-  # Probabilidad de subida
-  p <- (1+rf - d) / (u - d)
-  # Precio del activo subyacente en el estado de subida y bajada
-  Su <- S * u
-  Sd <- S * d
-  # Valor de la opción en el estado de subida y bajada
-  Cu <- max(Su - K, 0)
-  Cd <- max(Sd - K, 0)
-  # Calcula el precio de la opción
-  C <- (Cu * p + Cd * (1 - p)) / (1 + rf)
-  return(C)
-}
-
-# Parámetros
-S <- 1344    # Precio actual del activo subyacente
-K <- 1400    # Precio de ejercicio de la opción
-rf <- 0.0642   # Tasa libre de riesgo
-u <- 1.1    # Factor de crecimiento
-d <- 0.9    # Factor de decaimiento
-
-# Calcula el precio de la opción
-precio_opción<- option_single_period_binomial_tree(S, K, rf, u, d)
-
-cat("El precio de la opción europea de compra es:", precio_opción, "\n")
-
-```
-
-### Análisis de contraste de ambos modelos
-
-Comparando los resultados, en Black and Scholes el precio de la opción es 35 pesos y con el modelo binomial 60 pesos.
-
-La principal diferencia es que el modelo binomial incluye la probabilidad de que el activo se encuentre en el estado up, y cuanto seria el retorno en ese caso. Por ejemplo, puede existir un 70% que la acción suba de precio, y su retorno va a ser 1.2 veces el precio original.
-
-### Reporte Grupal: Caso Administración
+![](Datos/WhatsApp%20Image%202023-09-28%20at%2015.22.21.jpeg){fig-align="right"}
