--- a/fotos/Plantilla.qmd
+++ b/fotos/Plantilla.qmd
@@ -228,7 +228,7 @@ volatilidad<-var(rendimientos[2:length(rendimientos)])
 
 S<- 1344 # Precio de la acción a 16 de octubre
 K<- 1300 # Precio del ejercicio
-R<- 0.0642 # Tasa libre de riesgo (Bonos BCH a 10 años al 12 de oct)
+R<- 0.0695 # Tasa libre de riesgo (Bonos BCH a 2 años al 12 de oct)
 sigma <-sigma
 t <- 0.2 # Tiempo
 
@@ -270,7 +270,7 @@ C: Precio de la opcion de compra (Valor de la acción que se acuerda)
 
 Cu, Cd: representa los valores de la opción en los distintos estados, en otras palabras, son las ganancias (si es perdida se considera como ganancia 0).
 
-El siguiente diagrama explica el modelo
+El siguiente diagrama explica el modelo donde el precio de la accion en un tiempo t+1 tiene distintos posibles valores, y por ende distintas ganancias.
 
 ![](Captura%20de%20Pantalla%202023-10-17%20a%20la(s)%2018.16.04.png)
 
@@ -287,7 +287,7 @@ $$
 La probabilidad de ocurrencia del escenario positivo se modala como
 
 $$
-P=\frac{1+Rf-D}{U-D}
+P=\frac{1+{R_f}-D}{U-D}
 $$
 
 Donde Rf es la tasa libre de riesgo
@@ -295,7 +295,7 @@ Donde Rf es la tasa libre de riesgo
 Otra posible manera de calcular la probabilidad es
 
 $$
-P = \frac{e^{r\Delta t} - d}{U - D}
+P = \frac{e^{r\Delta t} - D}{U - D}
 $$
 
 Por otro lado, la probabilidad que ocurra el escenario negativo se modela como
@@ -310,26 +310,25 @@ $$
 C = \frac{{C_u \cdot P + C_d \cdot (1 - P)}}{{1 + R_f}}
 $$
 
-Cabe mencionar que este modelo se puede extender hasta n periodos, pero por simplicidad solo se usara para 1 periodo
+Cabe mencionar que este modelo se puede extender hasta n periodos, pero por simplicidad solo se usara para 1 periodo.
 
 Julián Benavides, en su paper "EVALUACIÓN DE LA APLICACIÓN DE DOS MODELOS DE VALORACIÓN DE OPCIONES A LA ADMINISTRACIÓN DE PORTAFOLIOS" (2002) compara el modelo black and scholes con el binomial con relación al "portafolio insurence"
 
-Gastón Silverio, en su paper "Modelo binomial para la valoración de empresas y los efectos de la deuda: escudo fiscal y liquidación de la firma" (2014) propone un modelo para valorar empresas teniendo como base la teoria de opciones reales.
+Gastón Silverio, en su paper "Modelo binomial para la valoración de empresas y los efectos de la deuda: escudo fiscal y liquidación de la firma" (2014) propone un modelo para valorar empresas teniendo como base la teoría de opciones reales.
 
-### Aplicacion modelo adicional
+Por ultimo, Ahmad y Anuradha en su Paper "Comparison: Binomial model and Black Scholes model"( 2018) en donde tratan de demostrar que sus resultados son aproximadamentes iguales usando el estadistico t y el metodo Turkey.\
+
+### Aplicación modelo adicional
 
 ```{r}
 # Función para valorar una opción europea de compra con un solo período
 option_single_period_binomial_tree <- function(S, K, rf, u, d){
   # Probabilidad de subida
   p <- (1+rf - d) / (u - d)
-  # Precio del activo subyacente en el estado de subida y bajada
-  Su <- S * u
-  Sd <- S * d
-  # Valor de la opción en el estado de subida y bajada
-  Cu <- max(Su - K, 0)
-  Cd <- max(Sd - K, 0)
-  # Calcula el precio de la opción
+  Su <- S * u #Precio de la acción en estado U
+  Sd <- S * d #Precio de la acción en estado D
+  Cu <- max(Su - K, 0) #Valor opcion en U
+  Cd <- max(Sd - K, 0) #Valor opcion en D
   C <- (Cu * p + Cd * (1 - p)) / (1 + rf)
   return(C)
 }
@@ -350,36 +349,41 @@ cat("El precio de la opción europea de compra es:", precio_opción, "\n")
 
 ### Análisis de contraste de ambos modelos
 
-Comparando los resultados, en Black and Scholes el precio de la opción es 60 pesos y con el modelo binomial 137 pesos. Sin embargo, cuando en black and scholes se considera tiempo como 1 año, y en el modelo binomial Su como 1.1 y Sd como 0.9 los resultados son parecidos, dando como resultado 124 pesos en black and sholes y 137 en el arbol binomial.
+Comparando los resultados, en Black and Scholes el precio de la opción es 61.94 pesos y con el modelo binomial 137,6 pesos. Sin embargo, cuando en black and scholes se considera tiempo como 1 año, y en el modelo binomial $S_u$ como 1.1 y $S_d$ como 0.9 los resultados son parecidos, dando como resultado 124 pesos en black and sholes y 137 en el árbol binomial.
 
-La principal diferencia es que el modelo binomial incluye la probabilidad de que el activo se encuentre en el estado up, y cuanto seria el retorno en ese caso. Por ejemplo, puede existir un 70% que la acción suba de precio, y su retorno va a ser 1.2 veces el precio original.
+La principal diferencia es que el modelo binomial incluye la probabilidad de que el activo se encuentre en el estado up, y cuanto seria el retorno en ese caso. Por ejemplo, puede existir un 70% que la acción suba de precio, y su retorno va a ser 1.2 veces el precio original. Por lo tanto, este modelo considera la probabilidad y rentabilidad de distintos escenario lo que permite calcular el valor de la opción cuando existe incertidumbre.
 
-Modelo Black & Scholes considera tiempo lo cual permite analizar
+Modelo Black & Scholes considera tiempo como variable en el modelo lo cual permite analizar en tiempo continuo el valor de la acción, el método binomial es para tiempos discretos.
 
-Modelo binomial considera la probabilidad y rentabilidad en los distintos escenarios, lo cual es util ya que al saber de antam
-
-Otra diferencias entre Black and Scholes y el modelo binomial es que el primero requiere una solución de ecuación diferencial estocastica mientras que el modelo binomial es un metodo estadistico (Ahmad, 2018)
-
-black shcoles solo europeo
-
-binomial deja americana
+Otra diferencias entre Black and Scholes y el modelo binomial es que el primero requiere una solución de ecuación diferencial estocástica mientras que el modelo binomial es un método estadístico (Ahmad, 2018)
 
 ### Reporte Grupal: Caso Administración
 
-De los tres casos presentados se decidio replicar "Política de crédito de Braam Industries" para el activo Banco Santander
+De los tres casos presentados se decidió replicar "Política de crédito de Braam Industries" para el activo Banco Santander
 
-Primero, para determinar las ventas anuales se considero la cantidad de activos que tenía el Banco, cual fue obtenido en el siguiente link https://banco.santander.cl/uploads/000/040/799/ca92bae1-dde8-4eef-b791-c5b9dcb4d51d/original/Santander_Memoria_2022_vf.pdf
+Primero, para determinar las ventas anuales se considero la cantidad de activos que tenía el Banco, cual fue obtenido en el siguiente link <https://banco.santander.cl/uploads/000/040/799/ca92bae1-dde8-4eef-b791-c5b9dcb4d51d/original/Santander_Memoria_2022_vf.pdf>
 
 ![](Imagen%201.png){width="244"}
 
-Los bancos conmunmente no tienen una tasa de incumplimiento, por ende, se considero la tasa de morosidad. Los bancos hacen una diferenciación dependiendo del tipo de cliente.
+Los bancos comúnmente no tienen una tasa de incumplimiento, por ende, se consideró la tasa de morosidad. Los bancos hacen una diferenciación dependiendo del tipo de cliente.
 
-La siguiente tabla fue obtenida en https://banco.santander.cl/uploads/000/041/232/734f33e3-5145-4671-ae8b-7c592b1fb6fd/original/Management_commentary_032023.PDF
+La siguiente tabla fue obtenida en  https://banco.santander.cl/uploads/000/041/232/734f33e3-5145-4671-ae8b-7c592b1fb6fd/original/Management_commentary_032023.PDF
 
 ![](Imagen%202.png){fig-align="left"}
 
 ![](Imagen%203.png){fig-align="right"}
 
-Sin embargo, la CMF publicó la morosidad a 90 dias donde no separa por los distintos tipos de deudores. Para efectos de este trabajo se consideró el valor de 2,17% que pertence al total. El periodo de cuentas por cobrar se considero 90 dias. Para los costos administrativos se consideraro el total de los gastos operacionales y este se dividio por la cantidad de activos y se multiplico por 100 para tener el porcentaje.
+Sin embargo, la CMF publicó la morosidad a 90 días donde no separa por los distintos tipos de deudores. Para efectos de este trabajo se consideró el valor de 2,17% que pertenece al total. El periodo de cuentas por cobrar se consideró 90 días. Para los costos administrativos se considerará el total de los gastos operacionales y este se dividió por la cantidad de activos y se multiplicó por 100 para tener el porcentaje.
 
-La tasa de interes anual actualmente es 9,5%, lo que equivale a 0,024867% interes diario.
+Para definir la tasa de interés se consideró la TPM actual la cual actualmente es de 9,5% anual, lo que equivale a 0,024867% interés diario. Por último, se consideró que los costos variables corresponden al 45% de las ventas anuales.
+
+La empresa debe decidir qué política de crédito utilizar, para esto se compara la situación actual con tres posibles escenarios hipotéticos.
+
+Para esto se calcularon las ventas diarias, costos variables diarios, incumplimiento diario (en pesos), costos administrativos diarios y la tasa de interés que se debe descontar el flujo considerando la tasa de interés diaria y el periodo de cuentas por cobrar.
+
+Con estos datos se calculó el VPN para los 4 casos obteniendo que el periodo actual tiene la mejor política de crédito. Los resultados se muestran a continuación.
+
+\
+![](Captura de Pantalla 2023-10-26 a la(s) 16.14.40.png)
+
+Con respecto a la segunda pregunta, esta se omitió dado que la afirmación del enunciado es erronea, tanto en el ejemplo propuesto en el libro como en del trabajo presentado, las tasas de incumplimiento y costos administrativos en el caso 3 son mayores que el caso 2.
